--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
       <section id="outro">
      <div id="textblock"><h1>Spiegelung der Beteiligung</h1>
-        <p>Vielen Dank an Teilnahme, anbei Spiegelung text hier (Christian?)</p>
+        <p>Vielen Dank für die rege Teilnahme an der Beteiligung. Anbei zeigen wir die Beteiligungen und unsere Learnings daraus.
+        Da die Mehrheit den Entwürfen gegenüber positiv eingestellt waren, haben wir das als Zeichen verstanden das Konzept beizubehalten und auszarbeiten.</p>
       </div>
     </section>
 
@@ -48,7 +49,7 @@
           </section>
     
           <section id="outro">
-            <p id="desc">Hier steht ein kleiner Erläuterungstext</p>
+            <p id="desc">In den Bildmarke wurden die Übergänge zwischen grösseren und kleineren Elemente bearbeitet, sodass der Übergang flüssiger ist. Desweiteren wurden die Bildmarken für kleinere Grössen optimiert bzw sogenannte optical sizes generiert..</p>
               <div class="juxtapose" data-startingposition="35%" data-mode="horizontal">
                 <img class="left" src="vorher_a.jpg" data-label="vorher" alt="alt-description" />
                 <img class="right" src="nachher_a.jpg" data-label="nachher" alt="alt-description" />
@@ -57,7 +58,7 @@
 
 
           <section id="outro">
-            <p id="desc">Hier steht ein kleiner Erläuterungstext</p>
+            <p id="desc">In den Covern der Publikationen kann das Quadrat als Bildfläche aufgenommen werden. Die Pattern der Bildmarke können optional als Hintergrund benutzt werden.</p>
 
             <div class="juxtapose" data-startingposition="55%" data-mode="horizontal">
               <img class="left" src="vorher_b.jpg" data-label="vorher" alt="alt-description" />
@@ -77,32 +78,39 @@
         <div class="wrapper" id="js-wrapper">
           <div class="articles" id="js-slideContainer">
             <article class="article">
-              <span class="articleTitle" id="title2"><b>Logowelten:</b></br> Logos müssen heute in mannigfachen Umgebungen funktionieren. Konzipiert wurden verschiedene Aggregatzustände (von oben nach unten): </br> <b>1)</b> Signet (z.b für Favicons in der Browserleiste)</br> <b>2)</b> Signet mit Kürzel </br><b>3)</b> Signet mit ausgeschriebenen Namen </br><b>4)</b> Wortmarke mit eingearbeiteten Signets    </span>
-              <img src="a.jpg" alt="Konzept" width="auto" height="100%" />
-  
+              <span class="articleTitle" id="title2"><b>Text hier:</b></br> Text hier   </span>
+              <img src="final_logo.jpg" alt="Konzept" width="auto" height="100%" />
             </article>
+
             <article class="article">
-              <span class="articleTitle" id="title2"><b>Logowelten (englische Version):</b></br> Auch die englische Version kann nach gleichem Prinzip gesetzt werden.</span>
-              <img src="b.jpg" alt="Konzept" width="auto" height="100%" />
-  
+              <span class="articleTitle" id="title2"><b>Text hier</b></br> text hier.</span>
+              <img src="final_publ.jpg" alt="Konzept" width="auto" height="100%" />
             </article>
+
             <article class="article">
-              <span class="articleTitle" id="title3">Verschiedene Farbvarianten und Visitenkarten</span>
-              <img src="c.jpg" alt="Konzept" width="auto" height="100%" />
-  
+              <span class="articleTitle" id="title3">Text hier</span>
+              <img src="final_urkunde.jpg" alt="Konzept" width="auto" height="100%" />
             </article>
+
             <article class="article">
-              <span class="articleTitle" id="title4">Erste Entwürfe von Buchcovern </span>
-              <img src="d.jpg" alt="Konzept" width="auto" height="100%" />
-  
+              <span class="articleTitle" id="title4">Text hier </span>
+              <img src="final_typo.jpg" alt="Konzept" width="auto" height="100%" />
             </article>
+
             <article class="article">
-              <span class="articleTitle" id="title5">Erste Entwürfen von Urkunden</span>
-              <img src="e.jpg" alt="Konzept" width="auto" height="100%" />
-  
+              <span class="articleTitle" id="title0">Text hier</span>
+              <img src="final_lang.jpg" alt="Konzept" width="auto" height="100%" />
             </article>
+
           </div>
         </div>
+
+        <section id="outro">
+          <div id="textblock"><h1>Endkommentar</h1>
+             <p>Vielen Dank für die rege Teilnahme an der Beteiligung. Anbei zeigen wir die Beteiligungen und unsere Learnings daraus.
+             Da die Mehrheit den Entwürfen gegenüber positiv eingestellt waren, haben wir das als Zeichen verstanden das Konzept beizubehalten und auszarbeiten.</p>
+           </div>
+         </section>
     </main>
 
     <!-- libraries -->
